Fix yet another z-index bug with code in links

--- a/css/default.css
+++ b/css/default.css
@@ -1412,6 +1412,8 @@ table {
     border-style: solid;
     border-color: var(--GW-table-border-color);
     border-width: 2px 0;
+    position: relative;
+    z-index: 1;
 }
 
 /*=-------------------=*/
